# lib/db/src/schema/index.ts
@@ -4,4 +4,5 @@ export * from "./bills";
 export * from "./gmail";
 export * from "./plaid";
 export * from "./audit";
+export * from "./subscriptions";
 export * from "./relations";
